--- a/week-06/day-3/src/LoginForm.html
+++ b/week-06/day-3/src/LoginForm.html
@@ -16,7 +16,7 @@
     </div>
     <div>
         <label id="password_text" for="password">PASSWORD</label> <br>
-        <input type="text" id="password" name="user_password">
+        <input type="password" id="password" name="user_password">
     </div>
     <div>
         <label id="forgot_password" for="forgot_password">Forgot Password?</label>
