--- a/week-06/day-3/src/SignUpForm.html
+++ b/week-06/day-3/src/SignUpForm.html
@@ -7,34 +7,21 @@
 </head>
 <body>
 <form action="https://newsletter-ws.herokuapp.com/register" method="post">
-    <div>
-        <label id="account_login" for="account_login">Sign Up</label>
+    <div class="left_side">
+        <label id="account_login" for="account_login">Sign Up</label> <br>
+           <input type="text" id="username" name="name" placeholder="Username"> <br>
+           <input type="email" id="email" name="email" placeholder="E-mail"> <br>
+           <input type="password" id="password" name="password" placeholder="Password"> <br>
+           <input type="password" id="re_password" name="passwordConfirmation" placeholder="Retype-password"> <br>
+           <button type="submit" id="signMeIn">SIGN ME UP</button>
     </div>
-    <div>
-        <input type="text" id="username" name="name" placeholder="Username">
+    <div class="middle">
+        <button type="submit" id="or">OR</button> <br>
     </div>
-    <div>
-        <input type="email" id="email" name="email" placeholder="E-mail">
-    </div>
-    <div>
-        <input type="password" id="password" name="password" placeholder="Password">
-    </div>
-    <div>
-        <input type="password" id="re_password" name="passwordConfirmation" placeholder="Retype-password">
-    </div>
-    <div class="button">
-        <button type="submit" id="signMeIn">SIGN ME UP</button>
-    </div>
-    <div class="button">
-        <button type="submit" id="or">OR</button>
-    </div>    <div class="button">
-         <button type="submit" id="facebook">Log in with facebook</button>
-    </div>
-    <div class="button">
-        <button type="submit" id="twitter">Log in with Twitter</button>
-    </div>
-    <div class="button">
-        <button type="submit" id="google">Log in with Google+</button>
+    <div class="right_side">
+        <button type="login" id="facebook">Log in with facebook</button> <br>
+        <button type="login" id="twitter">Log in with Twitter</button> <br>
+        <button type="login" id="google">Log in with Google+</button> <br>
     </div>
 </form>
 </body>
